# openvino-genai-snap-example

./: CMakeLists.txt  README.md  openvinodemo.cpp  openvinodemo_chatbot.cpp
.github/workflows/: snap.yml
basic/: README.md  openvinodemo.cpp
basic/snap/: snapcraft.yaml
chatbot/: CMakeLists.txt  README.md  openvinodemo.cpp
chatbot_plus/: README.md  openvinochat.cpp
chatbot_plus/snap/: snapcraft.yaml
snap/: snapcraft.yaml
